# espresso-network

./: .env  .env.contracts.example  .env.deploy.esp.example  .env.docker.example  .env.lightweight  .envrc  .envrc.example  .gas-snapshot  .gitignore  .gitmodules  .pre-commit-config.yaml  .solhint.json  .typos.toml  AGENTS.md  API.md  CNAME  Cargo.toml  README.md  RELEASES.md  SECURITY.md  TODO.md  crates.js  cross-shell.nix  docker-compose.binary-upgrade-test.20250228-patch4.yaml  docker-compose.binary-upgrade-test.20250528-patch1.yaml  docker-compose.yaml  dregs.toml  flake.nix  foundry.toml  genesis.json  help.html  hotshot.just  index.html  justfile  leader_stats.html  package.json  process-compose-native.yaml  process-compose.yaml  quint-oracle.new-protocol-_fast-finality_.json  rust-toolchain.toml  (+6 more)
alloy-compat/: Cargo.toml
alloy-compat/src/: lib.rs
benchmark-stats/: Cargo.toml
benchmark-stats/src/: main.rs
client/: Cargo.toml  all.html  index.html  struct.SequencerClient.html  type.FeeMerkleProof.html  type.SequencerApiVersion.html
client/src/: lib.rs
crates/builder/: Cargo.toml
crates/builder/src/: api.rs  lib.rs  non_permissioned.rs
crates/cliquenet/: Cargo.toml  README.md
crates/cliquenet-addr/: Cargo.toml
crates/cliquenet-types/: Cargo.toml
crates/cliquenet-types/src/: lib.rs  x25519.rs
crates/cliquenet-x25519/: Cargo.toml
crates/cliquenet/benches/: bench1.rs
crates/cliquenet/src/: addr.rs  chan.rs  connection.rs  delay.rs  error.rs  frame.rs  id.rs  lib.rs  metrics.rs  msg.rs  net.rs  noise.rs  queue.rs  retry.rs  time.rs  tls.rs  util.rs  x25519.rs
crates/cliquenet/tests/: frame-handling.rs  network.rs
crates/http-client/: Cargo.toml
crates/http-client/src/: client.rs  error.rs  healthcheck.rs  lib.rs  request.rs  socket.rs
crates/http-client/tests/: loopback.rs
crates/libp2p_test/: Cargo.toml  Dockerfile  README.md
crates/process-metrics/: Cargo.toml  README.md  justfile
crates/staking-ui-service/: Cargo.toml  build.rs
crates/versions/: Cargo.toml
doc/: ubuntu.md  (+14 more)
espresso-dev-node/: Cargo.toml
espresso-dev-node/src/: lib.rs  main.rs
espresso-dev-node/tests/: dev_node_tests.rs
hotshot-events-service/: Cargo.toml
hotshot-events-service/api/: hotshot_events.toml
hotshot-events-service/src/: events.rs  events_source.rs  test.rs
hotshot-query-service/: Cargo.toml  README.md
hotshot-query-service-types/: Cargo.toml
hotshot-query-service-types/src/: availability.rs  error.rs  explorer.rs  height_indexed.rs  lib.rs  merklized_state.rs  node.rs  status.rs
hotshot-query-service/api/: availability.toml  node.toml
hotshot-query-service/examples/: migration_traits.rs  simple-server.rs
hotshot-query-service/src/: api.rs  availability.rs  data_source.rs  error.rs  explorer.rs  fetching.rs  lib.rs  merklized_state.rs  metrics.rs  migration.rs  node.rs  resolvable.rs  sqlite_options.rs  status.rs  task.rs  testing.rs  types.rs  util.rs
hotshot-state-prover/: Cargo.toml  README.md  RUNBOOK.md
hotshot-state-prover/src/: circuit.rs  http.rs  lib.rs  mock_ledger.rs  service.rs  snark.rs  test_utils.rs  utils.rs
light-client/: Cargo.toml
light-client-query-service/: Cargo.toml
light-client-query-service/genesis/: decaf.toml  mainnet.toml
light-client-query-service/src/: api.rs  lib.rs  main.rs
light-client/migrations/: 01_init_schema.sql  01_schema.sql  02_add_leaf_last_used.sql
light-client/src/: client.rs  lib.rs  provider.rs  state.rs  storage.rs  testing.rs  types.rs
request-response/: Cargo.toml
request-response/src/: lib.rs  message.rs  network.rs  request.rs  util.rs
sdks/crypto-helper/: Cargo.toml
sequencer-sqlite/: Cargo.toml
slow-tests/: Cargo.toml
slow-tests/src/: lib.rs
slow-tests/tests/: api_tests.rs  epoch_reward_restart.rs  restart_tests.rs  state.rs
staking-cli/: Cargo.toml  DEVELOPER_DOCS.md  README.md  config.decaf.toml  config.demo-docker.toml  config.demo-native.toml  config.demo.toml  config.mainnet.toml
staking-cli/src/: claim.rs  cli.rs  concurrent.rs  delegation.rs  demo.rs  deploy.rs  funding.rs  info.rs  l1.rs  lib.rs  main.rs  metadata.rs  metadata_types.rs  openmetrics.rs  output.rs  parse.rs  receipt.rs  registration.rs  signature.rs  transaction.rs  tx_log.rs  undelegation.rs
staking-cli/tests/: cli.rs  demo.rs  node_signatures.rs
stats/: Cargo.toml
stats/src/: main.rs
tests/: Cargo.toml  main.rs  proof_of_stake.rs  reward_claims_e2e.rs  smoke.rs  upgrades.rs
tests/common/: mod.rs
utils/: Cargo.toml  all.html  build.rs  enum.Command.html  fn.main.html  index.html  sidebar-items.js  struct.Options.html
utils/keygen/: enum.Scheme.html  fn.parse_seed.html  fn.run.html  struct.Options.html
utils/ns_aggregator/: fn.process_chunk.html  fn.run.html  index.html  struct.Options.html
utils/pubkey/: enum.PrivateKey.html  struct.Options.html
utils/reset_storage/: enum.Commands.html  enum.SequencerStorage.html  fn.reset_storage.html  fn.run.html  index.html
utils/src/: build_info.rs  deployer.rs  lib.rs  stake_table.rs
vid/: Cargo.toml  algorithm.md  all.html  enum.VidError.html  index.html  sidebar-items.js  trait.VidScheme.html  type.VerificationResult.html  type.VidResult.html
vid/avid_m/: struct.AvidMCommit.html  struct.AvidMParam.html  struct.AvidMScheme.html  struct.AvidMShare.html  struct.RawAvidMShare.html
vid/avidm/: fn.radix2_domain.html  index.html  struct.AvidMCommit.html  struct.AvidMParam.html  struct.AvidMScheme.html  struct.AvidMShare.html  struct.RawAvidMShare.html  type.Config.html  type.F.html  type.MerkleCommit.html  type.MerkleProof.html  type.MerkleTree.html
vid/avidm_gf2/: index.html  sidebar-items.js  struct.AvidmGf2Commit.html  struct.AvidmGf2Param.html  struct.AvidmGf2Scheme.html  struct.AvidmGf2Share.html  type.MerkleCommit.html  type.MerkleProof.html  type.MerkleTree.html
vid/benches/: avidm.rs  avidm_gf2.rs  avidm_gf2_breakdown.rs  avidm_gf2_ns.rs  big_mt.rs  dispersal.rs  recovery.rs  verify.rs
vid/src/: avid_m.rs  avid_m_gf2.rs  avidm.rs  avidm_gf2.rs  lib.rs  utils.rs
vid/utils/: index.html  sidebar-items.js
(+613927 files in other folders)
