
[workspace]

resolver = "2"

members = [
    "alloy-compat",
    "benchmark-stats",
    "client",
    "contracts/rust/adapter",
    "contracts/rust/deployer",
    "contracts/rust/diff-test",
    "contracts/rust/gen-vk-contract",
    "crates/builder",
    "crates/hotshot-builder/legacy",
    "crates/hotshot-builder/refactored",
    "crates/hotshot/builder-api",
    "crates/hotshot/example-types",
    "crates/hotshot/examples",
    "crates/hotshot/hotshot",
    "crates/hotshot/libp2p-networking",
    "crates/hotshot/macros",
    "crates/hotshot/orchestrator",
    "crates/hotshot/task",
    "crates/hotshot/task-impls",
    "crates/hotshot/testing",
    "crates/hotshot/types",
    "crates/hotshot/utils",
    "espresso-dev-node",
    "hotshot-events-service",
    "hotshot-query-service",
    "hotshot-state-prover",
    "light-client",
    "node-metrics",
    "request-response",
    "sdks/crypto-helper",
    "sequencer",
    "sequencer-sqlite",
    "slow-tests",
    "staking-cli",
    "tests",
    "types",
    "utils",
    "vid",
]

# All crates except sequencer-sqlite and espresso-dev-node, to avoid turning on embedded-db feature
# for the whole workspace by default.
default-members = [
    "alloy-compat",
    "benchmark-stats",
    "client",
    "contracts/rust/adapter",
    "contracts/rust/deployer",
    "contracts/rust/diff-test",
    "contracts/rust/gen-vk-contract",
    "crates/builder",
    "crates/hotshot/builder-api",
    "crates/hotshot/example-types",
    "crates/hotshot/examples",
    "crates/hotshot/hotshot",
    "crates/hotshot/libp2p-networking",
    "crates/hotshot/macros",
    "crates/hotshot/orchestrator",
    "crates/hotshot/task",
    "crates/hotshot/task-impls",
    "crates/hotshot/testing",
    "crates/hotshot/types",
    "crates/hotshot/utils",
    "crates/hotshot-builder/legacy",
    "crates/hotshot-builder/refactored",
    "hotshot-events-service",
    "hotshot-query-service",
    "hotshot-state-prover",
    "node-metrics",
    "request-response",
    "sdks/crypto-helper",
    "sequencer",
    "slow-tests",
    "staking-cli",
    "tests",
    "types",
    "utils",
    "vid",
]

exclude = ["sequencer-sqlite"]
[workspace.package]
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"

[workspace.dependencies]
alloy = { version = "1.0", features = [
    "provider-ws",
    "json-rpc",
    "signer-mnemonic",
    "node-bindings",
    "getrandom",
] }
anyhow = "^1.0"
ark-bls12-381 = "0.5"
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ed-on-bn254 = "0.5"
ark-ff = "0.5"
ark-poly = "0.5"
ark-serialize = "0.5"
ark-srs = "0.3.3"
ark-std = "0.5"
async-broadcast = "0.7.0"
async-channel = "2"
async-lock = "3"
async-once-cell = "0.5"
async-trait = "0.1"
base64 = "0.22"
base64-bytes = "0.1"
bincode = "1.3.3"
bitvec = { version = "1", features = ["serde"] }
blake3 = "1.5"
cbor4ii = { version = "1.0", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
circular-buffer = "0.1.9"
clap = { version = "4.4", features = ["derive", "env", "string"] }
cld = "0.5"
dashmap = "6"
derive_builder = "0.20"
derive_more = { version = "2.0", features = ["full"] }
diff-test-bn254 = { git = "https://github.com/EspressoSystems/solidity-bn254.git", tag = "v0.2.0" }
digest = "0.10"
dotenvy = "0.15"
either = "1"
es-version = { git = "https://github.com/EspressoSystems/es-version.git", branch = "main" }
ethers = { version = "2.0", features = ["solc", "ws"] }
futures = "0.3"
hex = "0.4"
indexmap = { version = "2", features = ["serde"] }
lazy_static = "1"
libp2p-identity = { version = "0.2", features = ["ed25519", "serde"] }
libp2p-swarm-derive = { version = "0.35" }
memoize = { version = "0.4", features = ["full"] }
multiaddr = { version = "0.18" }
num_cpus = "1"
parking_lot = { version = "0.12", features = ["send_guard"] }
semver = "1"
serde-inline-default = "0.2"
serde_bytes = { version = "0.11" }
sha2 = "0.10"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
    "sync",
] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
tower-service = { version = "0.3", default-features = false }
tracing-subscriber = "0.3"
tracing-test = "0.2"
typenum = "1"

# Builder imports
hotshot-builder-legacy = { path = "crates/hotshot-builder/legacy" }
hotshot-builder-shared = { path = "crates/hotshot-builder/shared" }

# Hotshot imports
hotshot = { path = "crates/hotshot/hotshot" }
hotshot-builder-api = { path = "crates/hotshot/builder-api" }
hotshot-contract-adapter = { path = "contracts/rust/adapter" }
hotshot-events-service = { path = "hotshot-events-service" }
# Temporary, used to pull in the mock auction results provider
hotshot-example-types = { path = "crates/hotshot/example-types" }
hotshot-libp2p-networking = { path = "crates/hotshot/libp2p-networking" }
hotshot-macros = { path = "crates/hotshot/macros" }
hotshot-orchestrator = { path = "crates/hotshot/orchestrator" }
hotshot-query-service = { path = "hotshot-query-service" }
hotshot-state-prover = { version = "0.1.0", path = "hotshot-state-prover" }
hotshot-task = { path = "crates/hotshot/task" }
hotshot-task-impls = { path = "crates/hotshot/task-impls" }
hotshot-testing = { path = "crates/hotshot/testing" }
hotshot-types = { path = "crates/hotshot/types" }
hotshot-utils = { path = "crates/hotshot/utils" }

espresso-types = { path = "types" }
light-client = { path = "light-client" }

# VID import
vid = { path = "vid", features = ["parallel", "keccak256"] }

bytesize = "1.3"
# committable = "0.2"
committable = { git = "https://github.com/EspressoSystems/commit.git", features = [
    "ark-serialize",
] }
derivative = "2.2"
itertools = "0.12"
jf-advz = { git = "https://github.com/EspressoSystems/jellyfish-compat", tag = "jf-advz-v0.2.2", features = [
    "std",
    "parallel",
] }
jf-crhf = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-crhf-v0.2.0" }
jf-merkle-tree-compat = { git = "https://github.com/EspressoSystems/jellyfish-compat", tag = "jf-merkle-tree-compat-v0.2.0", features = [
    "std",
] }
jf-pcs = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-pcs-v0.3.0", features = [
    "std",
    "parallel",
] }
jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-plonk-v0.7.0", features = [
    "test-apis",
] }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-relation-v0.5.0", features = [
    "std",
] }
jf-rescue = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-rescue-v0.3.0", features = [
    "std",
    "parallel",
] }
jf-signature = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-signature-v0.4.0", features = [
    "std",
] }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-utils-v0.5.0" }
libp2p = { package = "libp2p", version = "0.56", default-features = false, features = [
    "macros",
    "autonat",
    "cbor",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "quic",
    "request-response",
    "secp256k1",
    "serde",
] }
log-panics = { version = "2.0", features = ["with-backtrace"] }
lru = "0.12"
num-traits = "0.2"
paste = "1.0"
portpicker = "0.1.1"
pretty_assertions = { version = "1.4", features = ["unstable"] }
priority-queue = "2"
rand = "0.8.5"
rand_chacha = "0.3"
rand_distr = "0.4"
reqwest = "0.12"
rstest = "0.25.0"
rstest_reuse = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.113"
sqlx = "=0.8.3"
staking-cli = { path = "./staking-cli" }
static_assertions = "1.1"
strum = { version = "0.26", features = ["derive"] }
surf-disco = "0.9"
tagged-base64 = "0.4.1"
tempfile = "3.10"
test-log = { version = "0.2", features = [
    "color",
    "trace",
], default-features = false }
thiserror = "2"
tide-disco = "0.9.4"
time = "0.3"
toml = "0.8"
tracing = "0.1"
trait-set = "0.3.0"
url = { version = "2.3", features = ["serde"] }
vbs = "0.1"
vec1 = { version = "1", features = ["serde"] }
vergen = { version = "8.3", features = ["git", "gitcl"] }
zeroize = "1.7"

# Push CDN imports
cdn-broker = { git = "https://github.com/EspressoSystems/Push-CDN", branch = "0.6.2-bcompat-resolve-public-ip", package = "cdn-broker", features = ["global-permits"] }
cdn-client = { git = "https://github.com/EspressoSystems/Push-CDN", branch = "0.6.2-bcompat-resolve-public-ip", package = "cdn-client" }
cdn-marshal = { git = "https://github.com/EspressoSystems/Push-CDN", branch = "0.6.2-bcompat-resolve-public-ip", package = "cdn-marshal" }

[workspace.lints.clippy]
# may prevent accidental deadlocks from holding guards over match statments
significant_drop_in_scrutinee = "warn"

# NOTE: when making changes here also update sequencer-sqlite/Cargo.toml.
[profile.dev]
# Probably the least demanding setting in terms of compilation time and memory
# that still provide tracebacks with line numbers.
strip = "none"
debug = "line-tables-only"

[profile.dev-debug]
# This profile should allow connecting debuggers. Compiles more slowly and
# requires significantly more memory to compile.
inherits = "dev"
strip = "none"
debug = "full"

# Don't optimize the binaries in the workspace. Compilation of dependencies can be cached
# effectively on the CI because they rarely change, whereas the workspace code usually changes and
# workspace compilation artifacts are therefore not cached. However, some of our tests don't work if
# we don't have any optimizations in the workspace.
[profile.test]
opt-level = 1

[profile.test.package.sequencer]
opt-level = 0
[profile.test.package.hotshot-testing]
opt-level = 0
[profile.test.package.hotshot-state-prover]
opt-level = 3
[profile.test.package.jf-merkle-tree]
opt-level = 3

# Geared towards building our docker images for local development
# - Compile quickly
# - Optimized enough to run demo
# - Avoids huge binaries
[profile.test-docker]
inherits = "test"
strip = true
debug = "none"
