[workspace]
resolver = "2"
members = [
    "alloy-compat",
    "benchmark-stats",
    "client",
    "contracts/rust/adapter",
    "contracts/rust/deployer",
    "contracts/rust/diff-test",
    "contracts/rust/gen-vk-contract",
    "crates/builder",
    "crates/cliquenet",
    "crates/hotshot-builder/legacy",
    "crates/hotshot-builder/refactored",
    "crates/hotshot/builder-api",
    "crates/hotshot/example-types",
    "crates/hotshot/examples",
    "crates/hotshot/hotshot",
    "crates/hotshot/libp2p-networking",
    "crates/hotshot/macros",
    "crates/hotshot/orchestrator",
    "crates/hotshot/task",
    "crates/hotshot/task-impls",
    "crates/hotshot/testing",
    "crates/hotshot/types",
    "crates/hotshot/utils",
    "crates/versions",
    "espresso-dev-node",
    "hotshot-events-service",
    "hotshot-query-service",
    "hotshot-state-prover",
    "light-client",
    "light-client-query-service",
    "node-metrics",
    "request-response",
    "sdks/crypto-helper",
    "sequencer",
    "sequencer-sqlite",
    "slow-tests",
    "staking-cli",
    "test-utils",
    "tests",
    "types",
    "utils",
    "vid",
]

# All crates except sequencer-sqlite, espresso-dev-node, hotshot-examples, and crypto-helper.
# sequencer-sqlite/espresso-dev-node: embedded-db feature conflict
# hotshot-examples: no tests, only needed for manual testing via `just hotshot::example`
# crypto-helper: vendored openssl leaks to workspace via feature unification
default-members = [
    "alloy-compat",
    "benchmark-stats",
    "client",
    "contracts/rust/adapter",
    "contracts/rust/deployer",
    "contracts/rust/diff-test",
    "contracts/rust/gen-vk-contract",
    "crates/builder",
    "crates/cliquenet",
    "crates/hotshot/builder-api",
    "crates/hotshot/example-types",
    "crates/hotshot/hotshot",
    "crates/hotshot/libp2p-networking",
    "crates/hotshot/macros",
    "crates/hotshot/orchestrator",
    "crates/hotshot/task",
    "crates/hotshot/task-impls",
    "crates/hotshot/testing",
    "crates/hotshot/types",
    "crates/hotshot/utils",
    "crates/hotshot-builder/legacy",
    "crates/hotshot-builder/refactored",
    "hotshot-events-service",
    "hotshot-query-service",
    "hotshot-state-prover",
    "light-client",
    "light-client-query-service",
    "node-metrics",
    "request-response",
    "sequencer",
    "slow-tests",
    "staking-cli",
    "test-utils",
    "tests",
    "types",
    "utils",
    "vid",
]
exclude = ["sequencer-sqlite"]

[workspace.package]
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"

[workspace.dependencies]
alloy = { version = "1.0", features = ["eips", "provider-ws", "json-rpc", "signer-mnemonic", "node-bindings", "getrandom", "signer-ledger" ] }
alloy-compat = { path = "alloy-compat" }
anyhow = "1.0"
ark-bls12-381 = "0.5"
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ed-on-bn254 = "0.5"
ark-ff = { version = "0.5", features = [ "asm" ] }
ark-poly = "0.5"
ark-serialize = { version = "0.5", features = ["derive"] }
ark-srs = "0.3.3"
ark-std = "0.5"
assert_cmd = "2.0.17"
async-broadcast = "0.7.0"
async-channel = "2"
async-lock = "3"
async-once-cell = "0.5"
async-trait = "0.1"
atomic = "0.6"
atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.5" }
automod = "1.0.14"
backoff = "0.4"
base64 = "0.22"
base64-bytes = "0.1"
bigdecimal = "0.4.8"
bimap = "0.6.3"
bincode = "1.3.3"
bitvec = { version = "1", features = ["serde"] }
blake3 = "1.5"
bon = "3.8.2"
bs58 = "0.5.1"
bytemuck = { version = "1.19", features = ["derive"] }
byteorder = { version = "1" }
bytes = { version = "1.11.0", features = ["serde"] }
bytesize = "1.3"
cbor4ii = { version = "1.0", features = ["serde1"] }
cdn-broker = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.6.2-bcompat-patch2", package = "cdn-broker", features = [ "global-permits" ] }
cdn-client = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.6.2-bcompat-patch2", package = "cdn-client" }
cdn-marshal = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.6.2-bcompat-patch2", package = "cdn-marshal" }
chrono = { version = "0.4", features = ["serde"] }
circular-buffer = "0.1.9"
clap = { version = "4.5", features = ["derive", "env", "string"] }
clap-serde = "0.5.1"
clap-serde-derive = "0.2.1"
cld = "0.5"
client = { path = "client" }
cliquenet = { path = "crates/cliquenet", features = ["metrics"] }
coarsetime = "0.1.34"
committable = { git = "https://github.com/EspressoSystems/commit.git", features = [ "ark-serialize" ] }
criterion = "0.8.1"
csv = "1"
custom_debug = "0.6"
dashmap = "6"
delegate = "0.13"
derivative = "2.2"
derive_builder = "0.20"
derive_more = { version = "2.0", features = ["full"] }
diff-test-bn254 = { git = "https://github.com/EspressoSystems/solidity-bn254.git", tag = "v0.2.0" }
digest = { version = "0.10", features = ["rand_core"] }
directories = "6.0.0"
displaydoc = "0.2.5"
dotenvy = "0.15"
dyn-clone = "1.0.17"
ed25519-compact = "2.2.0"
either = "1"
es-version = { git = "https://github.com/EspressoSystems/es-version.git", branch = "main" }
escargot = "0.5.10"
espresso-contract-deployer = { path = "contracts/rust/deployer" }
espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros.git", tag = "0.1.0" }
espresso-types = { path = "types" }
ethers = { version = "2.0", features = ["solc", "ws"] }
ethers-core = "2.0"
fluent-asserter = "0.1.9"
futures = { version = "0.3", features = ["alloc"] }
futures-util = "0.3.31"
generic-array = "1"
generic-tests = "0.1.3"
git-version = "0.3.9"
hex = "0.4"
hotshot = { path = "crates/hotshot/hotshot" }
hotshot-builder-api = { path = "crates/hotshot/builder-api" }
hotshot-builder-legacy = { path = "crates/hotshot-builder/legacy" }
hotshot-builder-refactored = { path = "crates/hotshot-builder/refactored" }
hotshot-builder-shared = { path = "crates/hotshot-builder/shared" }
hotshot-contract-adapter = { path = "contracts/rust/adapter" }
hotshot-events-service = { path = "hotshot-events-service" }
hotshot-example-types = { path = "crates/hotshot/example-types" }
hotshot-libp2p-networking = { path = "crates/hotshot/libp2p-networking" }
hotshot-macros = { path = "crates/hotshot/macros" }
hotshot-orchestrator = { path = "crates/hotshot/orchestrator" }
hotshot-query-service = { path = "hotshot-query-service" }
hotshot-state-prover = { path = "hotshot-state-prover" }
hotshot-task = { path = "crates/hotshot/task" }
hotshot-task-impls = { path = "crates/hotshot/task-impls" }
hotshot-testing = { path = "crates/hotshot/testing" }
hotshot-types = { path = "crates/hotshot/types" }
hotshot-utils = { path = "crates/hotshot/utils" }
humantime = "2"
include_dir = "0.7"
indexmap = { version = "2", features = ["serde"] }
insta = { version = "1.43", features = ["yaml"] }
itertools = "0.14"
jf-advz = { git = "https://github.com/EspressoSystems/jellyfish-compat", tag = "jf-advz-v0.2.2", features = [ "std", "parallel" ] }
jf-crhf = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-crhf-v0.2.0" }
jf-merkle-tree = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-merkle-tree-v0.4.0" }
jf-merkle-tree-compat = { git = "https://github.com/EspressoSystems/jellyfish-compat", tag = "jf-merkle-tree-compat-v0.2.0", features = [ "std" ] }
jf-pcs = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-pcs-v0.3.0", features = [ "std", "parallel", ] }
jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-plonk-v0.7.0", features = [ "test-apis" ] }
jf-plonk-compat = { package = "jf-plonk", git = "https://github.com/EspressoSystems/jellyfish", branch = "jf-relation-v0.5.0-compat", features = [ "std" ] }
jf-poseidon2 = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-poseidon2-v0.2.0", features = ["bn254"] }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-relation-v0.5.0", features = [ "std" ] }
jf-relation-compat = { package = "jf-relation", git = "https://github.com/EspressoSystems/jellyfish", branch = "jf-relation-v0.5.0-compat", features = [ "std" ] }
jf-rescue = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-rescue-v0.3.0", features = [ "std", "parallel", "gadgets" ] }
jf-rescue-compat = { package = "jf-rescue", git = "https://github.com/EspressoSystems/jellyfish", branch = "jf-relation-v0.5.0-compat", features = [ "gadgets" ] }
jf-signature = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-signature-v0.4.0", features = [ "std", "bls", "schnorr", "gadgets" ] }
jf-signature-compat = { package = "jf-signature", git = "https://github.com/EspressoSystems/jellyfish", branch = "jf-relation-v0.5.0-compat", features = [ "schnorr", "bls", "gadgets" ] }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-utils-v0.5.0" }
lazy_static = "1"
libp2p = { package = "libp2p", version = "0.56", default-features = false, features = [ "macros", "autonat", "cbor", "dns", "gossipsub", "identify", "kad", "quic", "request-response", "secp256k1", "serde", "tokio" ] }
libp2p-identity = { version = "0.2", features = ["ed25519", "serde"] }
libp2p-swarm-derive = { version = "0.35" }
light-client = { path = "light-client", features = ["clap"] }
local-ip-address = "0.6"
log = { version = "0.4" }
log-panics = { version = "2.0", features = ["with-backtrace"] }
lru = "0.12"
memoize = { version = "0.4", features = ["full"] }
mnemonic = "1"
moka = { version = "0.12.12", features = ["future"] }
multiaddr = { version = "0.18" }
nohash-hasher = "0.2.0"
nonempty-collections = "0.2"
num-bigint = "0.4"
num-traits = "0.2"
num_cpus = "1"
num_enum = "0.7"
openssl = { version = "0.10", features = ["vendored"] }
p3-maybe-rayon = "0.2"
parking_lot = { version = "0.12", features = ["send_guard"] }
paste = "1.0"
pin-project = "1"
plotly = "0.13.5"
predicates = "3.1.3"
pretty_assertions = { version = "1.4", features = ["unstable"] }
primitive-types = "0.13"
priority-queue = "2"
proc-macro2 = "1"
prometheus = { version = "0.13", default-features = false }
prometheus-parse = "0.2.5"
quick_cache = "0.6"
quickcheck = "1.0"
quote = "1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3"
rand_distr = "0.4"
reed-solomon-simd = "3.1.0"
refinery = { version = "0.8", features = ["tokio-postgres"] }
refinery-core = { version = "0.8" }
request-response = { path = "request-response" }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
rstest = "0.25.0"
rstest_reuse = "0.7.0"
rust_decimal = "1.36.0"
semver = "1"
sequencer = { path = "sequencer", default-features = false }
sequencer-utils = { path = "utils" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-inline-default = "0.2"
serde_arrays = "0.2.0"
serde_bytes = { version = "0.11" }
serde_json = "1.0.113"
sha2 = "0.10"
sha3 = "0.10.8"
snafu = "0.8"
snow = { version = "0.10.0", features = ["ring-accelerated"] }
sqlx = { version = "=0.8.3", features = ["bit-vec", "postgres", "runtime-tokio", "tls-native-tls"] }
staking-cli = { path = "staking-cli" }
static_assertions = "1.1"
strum = { version = "0.26", features = ["derive"] }
surf = "2.3.2"
surf-disco = "0.9"
syn = { version = "2", features = ["full", "extra-traits"] }
sysinfo = "0.33.1"
tagged-base64 = "0.4.1"
tempfile = "3.10"
test-log = { version = "0.2", features = [ "color", "trace" ] }
test-utils = { path = "test-utils" }
thiserror = "2"
tide-disco = "0.9"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
trait-set = "0.3.0"
trait-variant = "0.1"
typenum = "1"
url = { version = "2.3", features = ["serde"] }
vbs = "0.1"
vec1 = { version = "1", features = ["serde"] }
vergen = { version = "9", features = ["build", "cargo"] }
vergen-gitcl = "9"
versions = { path = "crates/versions" }
vid = { path = "vid", features = ["parallel", "keccak256"] }
warp = { version = "0.4", features = ["server"] }
zeroize = "1.7"

[workspace.lints.clippy]
# may prevent accidental deadlocks from holding guards over match statments
significant_drop_in_scrutinee = "warn"

[profile.dev]
strip = "none"
debug = "line-tables-only"

[profile.dev-debug]
inherits = "dev"
strip = "none"
debug = "full"

# Workspace crates: opt-level 0 (not cached on CI, recompile every run).
# Dependencies: opt-level 1 via "*" (cached on CI, rarely recompile).
# Consensus crates: opt-level 1 (hotshot tests fail with too many failed views at opt-level 0).
# ZK-heavy crates: opt-level 3 (tests too slow without optimization).
[profile.test]
opt-level = 0

[profile.test.package."*"]
opt-level = 1
[profile.test.package.hotshot]
opt-level = 1
[profile.test.package.hotshot-types]
opt-level = 1
[profile.test.package.hotshot-task-impls]
opt-level = 1
[profile.test.package.hotshot-task]
opt-level = 1
[profile.test.package.hotshot-example-types]
opt-level = 1
[profile.test.package.espresso-types]
opt-level = 1
[profile.test.package.vid]
opt-level = 1
[profile.test.package.hotshot-builder-api]
opt-level = 1
[profile.test.package.hotshot-builder-legacy]
opt-level = 1
[profile.test.package.hotshot-utils]
opt-level = 1
[profile.test.package.hotshot-state-prover]
opt-level = 3
[profile.test.package.jf-merkle-tree]
opt-level = 3

[profile.test-docker]
inherits = "test"
strip = true
debug = "none"
