[package]
name = "alloy-compat"
description = "Compatibility helpers and conversions from ethers and older alloy to newer alloy"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
# Direct declaration (not workspace) so SP1 zkVM builds can drop the default
# reqwest/ws transports; node builds restore them via feature unification.
alloy = { version = "1.0", default-features = false, features = [
    "serde",
    "signers",
] }
ethers-core = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
bincode = { workspace = true }

[lints]
workspace = true
