[package]
authors = { workspace = true }
name = "benchmark-stats"
version = { workspace = true }
edition = { workspace = true }
license = "MIT"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
espresso-types = { workspace = true }
hotshot-task-impls = { workspace = true }
hotshot-types = { workspace = true }
plotly = { workspace = true }
serde = { workspace = true }
