[package]
name = "espresso-dev-node"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition.workspace = true

[[bin]]
name = "espresso-dev-node"
path = "src/main.rs"

[dependencies]
sequencer = { path = "../sequencer", features = ["testing", "embedded-db"] }

alloy = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
espresso-contract-deployer = { workspace = true }
espresso-types = { workspace = true }
futures = { workspace = true }
hotshot-contract-adapter = { workspace = true }
hotshot-state-prover = { workspace = true }
hotshot-types = { workspace = true }
itertools = { workspace = true }
sequencer-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
staking-cli = { workspace = true }
tempfile = { workspace = true }
test-utils = { workspace = true }
tide-disco = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }
versions = { workspace = true }

[dev-dependencies]
committable = { workspace = true }
escargot = { workspace = true }
hotshot-query-service = { workspace = true }
jf-merkle-tree-compat = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
surf-disco = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
