[package]
name = "hotshot-events-service"
version = "0.1.57"
edition.workspace = true
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true }
async-broadcast = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
hotshot-types = { workspace = true }
rand = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tide-disco = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
vbs = { workspace = true }

[dev-dependencies]
hotshot-example-types = { workspace = true }
surf-disco = { workspace = true }
test-utils = { workspace = true }

[lints]
workspace = true
