# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the HotShot Query Service library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU
# General Public License as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not,
# see <https://www.gnu.org/licenses/>.

[package]
name = "hotshot-query-service"
version = "0.1.76"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[features]
default = ["file-system-data-source", "metrics-data-source", "sql-data-source"]

# Enable the availability data source backed by the local file system.
file-system-data-source = ["atomic_store"]

# Enable a lightweight data source for status APIs without the archival availability API.
metrics-data-source = []

# Enable the availability data source backed by a SQL database (Postgres and SQLite).
sql-data-source = ["include_dir", "refinery", "refinery-core", "sqlx", "log"]

# Enable extra features useful for writing tests with a query service.
testing = [
    "espresso-macros",
    "rand",
    "tempfile",
    "test-utils",
    "sql-data-source",
    "file-system-data-source",
]

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
ark-serialize = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }

# Dependencies enabled by feature "file-system-data-source".
atomic_store = { workspace = true, optional = true }
backoff = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
committable = { workspace = true }
custom_debug = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }

# Dependencies enabled by feature "testing".
espresso-macros = { workspace = true, optional = true }
futures = { workspace = true }
hotshot = { workspace = true }
hotshot-events-service = { workspace = true }
hotshot-example-types = { workspace = true }
hotshot-testing = { workspace = true }
hotshot-types = { workspace = true }

# Dependencies enabled by feature "sql-data-source".
include_dir = { workspace = true, optional = true }
itertools = { workspace = true }
jf-advz = { workspace = true }
jf-merkle-tree-compat = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true, optional = true }
prometheus = { workspace = true }
rand = { workspace = true, optional = true }
refinery = { workspace = true, optional = true }
refinery-core = { workspace = true, optional = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true, optional = true }
surf-disco = { workspace = true }
tagged-base64 = { workspace = true }
tempfile = { workspace = true, optional = true }
test-utils = { workspace = true, optional = true }
tide-disco = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
trait-variant = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }
vec1 = { workspace = true }
versions = { workspace = true }

# Dependencies enabled by feature "backtrace-on-stack-overflow".
#
# This feature allows unit tests to print out a backtrace if they overflow their stack. The
# implementation may trigger undefined behavior, so it is only used in tests and requires its own
# separate feature flag; it is not enabled just by using the "testing" feature.
#
# This feature is not supported on Windows because it uses Unix-style signal handling to catch
# stack overflow exceptions.
[target.'cfg(not(windows))'.dependencies]
backtrace-on-stack-overflow = { version = "0.3", optional = true }

[dev-dependencies]
clap = { workspace = true }
espresso-macros = { workspace = true }
generic-array = "0.14"
rand = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
test-utils = { workspace = true }

[[example]]
name = "simple-server"
required-features = ["sql-data-source", "testing"]

[lints]
workspace = true
